apps/parks-app/manifests/frontend-deployment.yaml
---
kind: DeploymentConfig
apiVersion: v1
metadata:
  name: restify
  namespace: parks-app
  labels:
    app: restify
spec:
  strategy:
    resources: {}
  triggers:
  - type: ConfigChange
  - type: ImageChange
    imageChangeParams:
      automatic: true
      containerNames:
      - restify
      from:
        kind: ImageStreamTag
        name: "restify:latest"
  replicas: 1
  selector:
    app: restify
    deploymentconfig: restify
  template:
    metadata:
      creationTimestamp: 
      labels:
        app: restify
        deploymentconfig: restify
    spec:
      volumes:
      - name: "restify-volume-1"
        emptyDir: {}
      containers:
      - name: restify
        image: library/restify:latest
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        volumeMounts:
        - name: "restify-volume-1"
          mountPath: "/run"
status: {}
