apps/parks-app/manifests/mongo-deployment.yaml
---
kind: DeploymentConfig
apiVersion: v1
metadata:
  name: mongodb
  namespace: parks-app
spec:
  strategy:
    type: Recreate
  triggers:
  - type: ImageChange
    imageChangeParams:
      automatic: true
      containerNames:
      - mongodb-container
      from:
        kind: ImageStreamTag
        name: mongodb:latest
        namespace: openshift
  - type: ConfigChange
  replicas: 1
  selector:
    name: mongodb
  template:
    metadata:
      labels:
        name: mongodb
    spec:
      containers:
      - name: mongodb-container
        image: " "
        ports:
        - containerPort: 27017
          protocol: TCP
        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db"
        imagePullPolicy: Always
      volumes:
      - name: mongodb-data
        persistentVolumeClaim:
          claimName: mongodb-data-claim
      restartPolicy: Always
